--- a/src/pug-example/src/index.pug
+++ b/src/pug-example/src/index.pug
@@ -1,8 +1,16 @@
 extends ./_layout.pug
 
 block formatter
-  - title = "hello world"
-  -const nav = {home:'/', about:'/about/', contact: '/contact/'}
+  -
+    title = "hello world"
+    const nav = {home:'/', about:'/about/', contact: '/contact/'}
+    let data = null
+    try{
+      data = yaml.safeLoad(fs.readFileSync('PATH.yml', 'utf-8'));
+    }
+    catch(e){
+      console.log(e)
+    }
 
 block header
   h1=title
