--- a/src/vue/components/component0.html
+++ b/src/vue/components/component0.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
-  <title></title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width">
+<title></title>
 </head>
 <body>
 <div id="app"></div>
 <script src="https://cdn.jsdelivr.net/npm/vue"></script>
 <script>
-
 Vue.component('my-h1', {
   props: ['h1text'],
   template: '<h1>{{ h1text }}</h1>',
@@ -31,7 +31,7 @@ Vue.component('my-li', {
   }
 })
 
-const app = new Vue({
+const vm = new Vue({
   el: '#app',
   template: `
     <div>
