--- a/src/vuetify-example/src/sass/variables.sass
+++ b/src/vuetify-example/src/sass/variables.sass
@@ -1,1 +1,19 @@
 @charset "utf-8"
+
+$minchoMeiryo: Meiryo, "メイリオ"
+$minchoHiragino: "Hiragino Mincho ProN", "ヒラギノ明朝 ProN", "Hiragino Mincho Pro"
+$minchoYu: YuMincho, "Yu Mincho", "游明朝"
+$minchoCommon: "Times New Roman", serif
+
+$gothicMeiryo: Meiryo, "メイリオ"
+$gothicOsaka: Osaka
+$gothicHiragino: "Hiragino Kaku Gothic Pro", "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic ProN", "ヒラギノ角ゴ ProN"
+$gothicYu: YuGothic, "Yu Gothic", "Yu Gothic Medium", "游ゴシック体"
+$gothicMacos: -apple-system, BlinkMacSystemFont
+$gothicCommon: arial, helvetica, sans-serif
+
+$ffGothic: ($gothicMacos, $gothicYu, $gothicHiragino, $gothicMeiryo, $gothicOsaka, $gothicCommon)
+$ffMincho: ($minchoHiragino, $minchoYu, $minchoMeiryo, $minchoCommon)
+$ffCommon: $ffGothic
+
+$body-font-family: $ffCommon
