--- a/src/storybook-example/storybook-html/src/sass/style.sass
+++ b/src/storybook-example/storybook-html/src/sass/style.sass
@@ -6,20 +6,36 @@
   border-box: box-sizing
 
 button
-  border: 1px solid black
+  border: 1px solid darkblue
   font-size: 1rem
   outline: none
+  border-radius: 6px
+  padding: 1rem
+  box-shadow: 4px 4px 4px rgba(0, 0, 0, .3)
 
   &.bs0
     background-color: #369
-    padding: 1rem
     color: white
-    border-radius: 6px
-    box-shadow: 4px 4px 4px rgba(0, 0, 0, .3)
 
 h1
+  font-size: 3rem
+h2
+  font-size: 2.5rem
+h3
   font-size: 2rem
-  &.hs0
-    background-color: purple
-    color: white
-    padding: .5rem
+h4
+  font-size: 1.5rem
+h5
+  font-size: 1rem
+h6
+  font-size: .85rem
+
+.hs0
+  background-color: purple
+  color: white
+  padding: .5rem
+
+.hs1
+  border-bottom: 2px dashed purple
+  padding: .5rem
+
